manifests/00-namespace-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gameoflife
---
# IMPORTANT: These secrets must be created after namespace creation:
#
# 1. Registry authentication secret:
#    Run: ./scripts/setup-registry-auth.sh
#
# 2. TLS certificates (if using custom certs):
#    kubectl create secret tls gameoflife-tls \
#      --cert=/home/ticktockbent/ssl/gameoflife/fullchain.pem \
#      --key=/home/ticktockbent/ssl/gameoflife/privkey.pem \
#      -n gameoflife
#
#    kubectl create secret tls gameoflife-api-tls \
#      --cert=/home/ticktockbent/ssl/gameoflife/fullchain.pem \
#      --key=/home/ticktockbent/ssl/gameoflife/privkey.pem \
#      -n gameoflife
#
# WARNING: Do not delete the namespace during redeployment as it removes these secrets!
