manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gameoflife
  labels:
    app: gameoflife
    project: distributed-gameoflife
