manifests/web-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameoflife-web-nodeport
  namespace: gameoflife
  labels:
    app: gameoflife
    component: web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: gameoflife
    component: web
